[gd_scene load_steps=7 format=3 uid="uid://b63j4b4etoqt4"]

[ext_resource type="Script" uid="uid://cr7uk7balahm8" path="res://script/power_up.gd" id="1_fqjiu"]
[ext_resource type="Texture2D" uid="uid://dq475vcff4778" path="res://assets/spray.png" id="2_mmot7"]
[ext_resource type="AudioStream" uid="uid://cj0eye3k1g10r" path="res://sounds/bugout sounds/OOhFire.mp3" id="3_4dcwu"]

[sub_resource type="Animation" id="Animation_kyyb8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1glyi"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b2ews"]
_data = {
&"RESET": SubResource("Animation_kyyb8"),
&"new_animation": SubResource("Animation_1glyi")
}

[node name="Area2D" type="Area2D"]
z_index = 6
script = ExtResource("1_fqjiu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-29, -23)
scale = Vector2(0.14104, 0.168798)
texture = ExtResource("2_mmot7")
offset = Vector2(210.667, -9.69372)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, 28, -16, -27, -9, -43, -4, -43, -4, -52, 4, -51, 4, -43, 10, -42, 18, -26, 18, 29)

[node name="AutoDespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_b2ews")
}

[node name="ohyeah" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4dcwu")
volume_db = 5.685

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 21
one_shot = true
emission_shape = 1
emission_sphere_radius = 49.88
spread = 134.38
initial_velocity_min = 324.14
initial_velocity_max = 324.14
angular_velocity_min = 165.76
angular_velocity_max = 165.76
scale_amount_max = 2.9
color = Color(0.639216, 0.211765, 1, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AutoDespawnTimer" to="." method="_on_auto_despawn_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
